Fix typo in localization, set default portal type

--- a/UJCSystem/ITJakub.Web.Hub/Localization/News/News.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/News/News.cs-CZ.json
@@ -15,7 +15,7 @@
     "ErrorNoCalendar": "Není dostupný žádný kalendář.",
     "AddForCommunityPortal": "Přidat pro Komunitní portál",
     "AddForResearchPortal": "Přidat pro Vokabulář webový",
-    "CreateNewsForOnePortalError": "Pro vztvoření novinky musíte vybrat alespoň jeden portál."
+    "CreateNewsForOnePortalError": "Pro vytvoření novinky musíte vybrat alespoň jeden portál."
   },
   "constants": {
     "GoogleCalendarLanguage": "cs"
