Minor fixes in localization

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -254,7 +254,7 @@
     "NoSelectedModuleForForum": "At least one module must be selected for forum creation.",
     "EmptyProjectNameError": "Project name cannot be empty.",
     "NoProjectsSearch": "Sorry, but we could not find any work matching ",
-    "NoProjectsFound": "Sorry, but no wokrs were found",
+    "NoProjectsFound": "Sorry, but no works were found",
     "NoProjects": "translate[Nebyla nalezena žádná díla]",
     "RenameSource": "translate[Přejmenovat zdroj]",
     "SearchQuery": "Showing results for",
