--- a/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.en.json
@@ -28,7 +28,7 @@
     "UserManagement": "User management",
     "GroupManagement": "Group management",
     "BookPermissionManagement": "Permissions on work",
-    "FeedbackManagement": "Feedback",
+    "FeedbackManagement": "Feedbacks",
     "FavoriteItems": "Favorite items",
     "AddNews": "Add news",
     "AboutVW": "About Vokabulář webový",
