--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.en.json
@@ -58,7 +58,8 @@
     "group-already-assigned-to-project": "The group already has assigned some permission for this work",
     "user-already-assigned-to-project": "The user already has assigned some permission for this work",
     "snapshot-must-contain-metadata": "The work must contain metadata otherwise it can't be published.",
-
+    "user-already-assigned-to-role": "The user '{0}' is already assigned to a group '{1}'.",
+    
     //Auth service codes
     "generic-error": "Operation failed",
     "user-not-exist-id": "User with given identifier does not exist",
