--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
@@ -14,11 +14,15 @@
     "unallowed-authorization-criteria":
       "Vyhledácí kritérium obsahuje nepovolené autorizační kritérium. Autorizační kritérium je generováno automaticky.",
     "unregistered-user-cardfile-access": "Neregistrovaní uživatelé nemají přístup ke čtení této kartotéky",
-    "unregistered-user-book-access-forbidden": "Neregistrovaní uživatelé nemají přístup ke čtétní této knihy",
+    "unregistered-user-book-access-forbidden": "Neregistrovaní uživatelé nemají přístup ke čtení této knihy",
     "unregistered-user-resource-access-forbidden":
       "Neregistrovaní uživatelé nemají přístup ke knize s tímto zdrojem",
     "user-cardfile-access-forbidden": "Nemáte přístup ke čtení kartotéky",
-    "user-book-access-forbidden": "Nemáte přístup ke čtení této knihy",
+    "user-book-access-forbidden": "Nemáte přístup k této knize",
+    "user-book-read-forbidden": "Nemáte přístup ke čtení této knihy",
+    "user-book-read-project-forbidden": "Nemáte přístup ke čtení tohoto rozpracovaného díla",
+    "user-book-write-project-forbidden": "Nemáte přístup k úpravě tohoto díla",
+    "user-book-admin-project-forbidden": "Nemáte přístup ke správě tohoto díla",
     "user-resource-access-forbidden": "Nemáte přístup ke knize s tímto zdrojem",
     "project-id-or-resource-id": "Musí být specifikován právě jeden parametr (ProjectId or ResourceId)",
     "create-anonymous-feedback": "Pokud není uživatel přihlášen je nutné vytvořit anonymní připomínku",
