--- a/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.cs-CZ.json
@@ -20,44 +20,140 @@
     "Editor": "Editor",
     "Collation": "Řazení",
 
+    "Create": "Vytvořit",
+    "Change": "Přejmenovat",
+    "Delete": "Odstranit",
+
     "CategoryHeadline": "Kategorie",
-    "CreateCategory": "Vytvořit novou kategorii",
-    "ChangeCategory": "Upravit kategorii",
-    "DeleteCategory": "Odstranit kategorii",
 
     "GenreHeadline": "Literární žánry",
-    "CreateGenre": "Vytvořit nový žánr",
-    "RenameGenre": "Přejmenovat žánr",
-    "DeleteGenre": "Odstranit žánr",
 
     "KindHeadline": "Literární druhy",
-    "CreateKind": "Vytvořit nový literární druh",
-    "RenameKind": "Přejmenovat literární druh",
-    "DeleteKind": "Odstranit literární druh",
 
     "ResponsiblePersonHeadline": "Odpovědné osoby",
-    "CreateResponsiblePerson": "Vytvořit novou odpovědnou osobu",
-    "RenameResponsiblePerson": "Přejmenovat odpovědnou osobu",
-    "DeleteResponsiblePerson": "Odstranit odpovědnou osobu",
 
     "ResponsiblePersonTypeHeadline": "Typy odpovědných osob",
-    "CreateResponsiblePersonType": "Vytvořit nový typ odpovědných osob",
-    "ChangeResponsiblePersonType": "Změnit typ odpovědných osob",
-    "DeleteResponsiblePersonType": "Odstranit typ odpovědných osob",
 
     "LiteraryOriginalHeadline": "Literární originály",
-    "CreateLiteraryOriginal": "Vytvořit nový literární originál",
-    "RenameLiteraryOriginal": "Přejmenovat literární originál",
-    "DeleteLiteraryOriginal": "Odstranit literární originál",
 
     "OriginalAuthorHeadline": "Původní autoři",
-    "CreateOriginalAuthor": "Vytvořit nového původního autora",
-    "RenameOriginalAuthor": "Přejmenovat původního autora",
-    "DeleteOriginalAuthor": "Odstranit původního autora",
 
     "KeywordHeadline": "Klíčová slova",
-    "CreateKeyword": "Vytvořit nové klíčové slovo",
-    "RenameKeyword": "Přejmenovat klíčové slovo",
-    "DeleteKeyword": "Odstranit klíčové slovo"
+
+    "EditorLoadError": "Chyba načítání editoru",
+    "InvalidEditorError": "Neplatný typ editoru",
+
+    "ConnectionErrorHeadline": "Varování",
+    "ConnectionErrorMessage": "Ztraceno připojení k serveru.\nAutomatické obnovení stránky není možné.",
+
+    "CollapseButtonTitle": "Přepnout sbalenou kategorii",
+
+    "ModalSuccess": "Úspěch",
+    "ModalWarning": "Varování",
+    "ModalError": "Chyba",
+    "ModalInfo": "Info",
+    "ModalConfirm": "Potvrzení",
+
+    "CategoryInputHeadline": "Kategorie",
+    "CategoryNameInput": "Popis kategorie:",
+    "ParentNameInput": "Nadřazená kategorie:",
+
+    "NoParentCategory": "(Žádná nadřazená kategorie)",
+
+    "CategoryWarningMessage": "Nic nebylo zadáno",
+    "CategoryCreateSuccess": "Nová kategorie byla vytvořena",
+    "CategoryCreateError": "Nová kategorie nebyla vytvořena",
+    "CategoryRenameSuccess": "Kategorie byla přejmenována",
+    "CategoryRenameError": "Kategorie nebyla přejmenována",
+    "CategoryInfoMessage": "Prosím vyberte kategorii",
+    "CategoryConfirmMessage": "Opravdu chcete odstranit tuto kategorii?",
+    "CategoryDeleteSuccess": "Odstranění kategorie bylo úspěšné",
+    "CategoryDeleteError": "Odstranění kategorie nebylo úspěšné",
+
+    "GenreInputHeadline": "Žánr",
+    "GenreNameInput": "Název žánru:",
+    "GenreWarningMessage": "Nic nebylo zadáno",
+    "GenreCreateSuccess": "Nový žánr byl vytvořen",
+    "GenreCreateError": "Nový žánr nebyl vytvořen",
+    "GenreRenameSuccess": "Žánr byl přejmenován",
+    "GenreRenameError": "Žánr nebyl přejmenován",
+    "GenreConfirmMessage": "Opravdu chcete odstranit tento žánr?",
+    "GenreDeleteSuccess": "Odstranění žánru bylo úspěšné",
+    "GenreDeleteError": "Odstranění žánru nebylo úspěšné",
+    "GenreInfoMessage": "Prosím vyberte žánr",
+
+    "KeywordInputHeadline": "Klíčové slovo",
+    "KeywordNameInput": "Klíčové slovo:",
+    "KeywordWarningMessage": "Nic nebylo zadáno",
+    "KeywordCreateSuccess": "Nové klíčové slovo bylo vytvořeno",
+    "KeywordCreateError": "Nové klíčové slovo nebylo vytvořeno",
+    "KeywordRenameSuccess": "Klíčové slovo bylo přejmenováno",
+    "KeywordRenameError": "Klíčové slovo nebylo přejmenováno",
+    "KeywordConfirmMessage": "Opravdu chcete odstranit toto klíčové slovo?",
+    "KeywordDeleteSuccess": "Odstranění klíčového slova bylo úspěšné",
+    "KeywordDeleteError": "Odstranění klíčového slova nebylo úspěšné",
+    "KeywordInfoMessage": "Prosím vyberte klíčové slovo",
+
+    "KindInputHeadline": "Druh",
+    "KindNameInput": "Název druhu:",
+    "KindWarningMessage": "Nic nebylo zadáno",
+    "KindCreateSuccess": "Nový druh byl vytvořen",
+    "KindCreateError": "Nový druh nebyl vytvořen",
+    "KindRenameSuccess": "Druh byl přejmenován",
+    "KindRenameError": "Druh nebyl přejmenován",
+    "KindConfirmMessage": "Opravdu chcete odstranit tento druh?",
+    "KindDeleteSuccess": "Odstranění druhu bylo úspěšné",
+    "KindDeleteError": "Odstranění druhu nebylo úspěšné",
+    "KindInfoMessage": "Prosím vyberte druh",
+
+    "LitOriginInputHeadline": "Literární originál",
+    "LitOriginNameInput": "Název literárního originálu:",
+    "LitOriginWarningMessage": "Nic nebylo zadáno",
+    "LitOriginCreateSuccess": "Nový literární originál byl vytvořen",
+    "LitOriginCreateError": "Nový literární originál nebyl vytvořen",
+    "LitOriginRenameSuccess": "Literární originál byl přejmenován",
+    "LitOriginRenameError": "Literární originál nebyl přejmenován",
+    "LitOriginConfirmMessage": "Opravdu chcete odstranit tento literární originál?",
+    "LitOriginDeleteSuccess": "Odstranění literárního originálu bylo úspěšné",
+    "LitOriginDeleteError": "Odstranění literárního originálu nebylo úspěšné",
+    "LitOriginInfoMessage": "Prosím vyberte literární originál",
+
+    "OrigAuthInputHeadline": "Originální autor",
+    "OrigAuthNameInput": "Originální autor:",
+    "OrigAuthWarningMessage": "Nic nebylo zadáno",
+    "OrigAuthCreateSuccess": "Originální autor byl vytvořen",
+    "OrigAuthCreateError": "Originální autor nebyl vytvořen",
+    "OrigAuthRenameSuccess": "Originální autor byl přejmenován",
+    "OrigAuthRenameError": "Originální autornebyl přejmenován",
+    "OrigAuthConfirmMessage": "Opravdu chcete odstranit tohoto originálního autora?",
+    "OrigAuthDeleteSuccess": "Odstranění originálního autora bylo úspěšné",
+    "OrigAuthDeleteError": "Odstranění originálního autora nebylo úspěšné",
+    "OrigAuthInfoMessage": "Prosím vyberte originálního autora",
+
+    "RespPerInputHeadline": "Odpovědná osoba",
+    "RespPerNameInput": "Jméno:",
+    "RespPerSurnameInput": "Příjmení:",
+    "RespPerWarningMessage": "Nic nebylo zadáno",
+    "RespPerCreateSuccess": "Nová opodvědná osoba byla vytvořena",
+    "RespPerCreateError": "Nová opodvědná osoba nebyla vytvořena",
+    "RespPerRenameSuccess": "Opodvědná osoba byla přejmenována",
+    "RespPerRenameError": "Opodvědná osoba nebyla přejmenována",
+    "RespPerConfirmMessage": "Opravdu chcete odstranit tuto odpovědnou osobu?",
+    "RespPerDeleteSuccess": "Odstranění odpovědné osoby bylo úspěšné",
+    "RespPerDeleteError": "Odstranění odpovědné osoby bylo úspěšné",
+    "RespPerInfoMessage": "Prosím vyberte odpovědnou osobu",
+
+    "RespPerTypeInputHeadline": "Typ odpovědné osoby",
+    "RespPerTypeNameInput": "Název typu:",
+    "RespPerTypeInput": "Typ:",
+    "RespPerTypeWarningMessage": "Nic nebylo zadáno",
+    "RespPerTypeCreateSuccess": "Nový typ odpovědné osoby byl vytvořen",
+    "RespPerTypeCreateError": "Nový typ odpovědné osoby byl vytvořen",
+    "RespPerTypeRenameSuccess": "Typ odpovědné osoby byl přejmenován",
+    "RespPerTypeRenameError": "Typ odpovědné osoby nebyl přejmenován",
+    "RespPerTypeConfirmMessage": "Opravdu chcete odstranit tento typ odpovědné osoby?",
+    "RespPerTypeDeleteSuccess": "Odstranění typu odpovědné osoby bylo úspěšné",
+    "RespPerTypeDeleteError": "Odstranění typu odpovědné osoby nebylo úspěšné",
+    "RespPerTypeInfoMessage": "Prosím vyberte typ odpovědné osoby"
   }
 }
