--- a/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/KeyTable/KeyTable.en.json
@@ -1,6 +1,5 @@
 {
   "culture": "en",
-  "scope": "KeyTable",
   "dictionary": {
     "KeyTableTitle": "Key table administration",
 
@@ -20,44 +19,142 @@
     "Editor": "Editor",
     "Collation": "Collation",
 
+    "Create": "Create",
+    "Change": "Remove",
+    "Delete": "Delete",
+
     "CategoryHeadline": "Categories",
-    "CreateCategory": "Create new category",
-    "ChangeCategory": "Change category",
-    "DeleteCategory": "Delete category",
 
     "GenreHeadline": "Literary genres",
-    "CreateGenre": "Create new genre",
-    "RenameGenre": "Rename genre",
-    "DeleteGenre": "Delete genre",
 
     "KindHeadline": "Literary kinds",
-    "CreateKind": "Create new literary kind",
-    "RenameKind": "Rename literary kind",
-    "DeleteKind": "Delete literary kind",
 
     "ResponsiblePersonHeadline": "Responsible people",
-    "CreateResponsiblePerson": "Create new responsible person",
-    "RenameResponsiblePerson": "Rename responsible person",
-    "DeleteResponsiblePerson": "Delete responsible person",
 
     "ResponsiblePersonTypeHeadline": "Responsible person types",
-    "CreateResponsiblePersonType": "Create new responsible person type",
-    "ChangeResponsiblePersonType": "Change responsible person type",
-    "DeleteResponsiblePersonType": "Delete responsible person type",
 
     "LiteraryOriginalHeadline": "Literary originals",
-    "CreateLiteraryOriginal": "Create new literary original",
-    "RenameLiteraryOriginal": "Rename literary original",
-    "DeleteLiteraryOriginal": "Delete literary original",
 
     "OriginalAuthorHeadline": "Original authors",
-    "CreateOriginalAuthor": "Create new original author",
-    "RenameOriginalAuthor": "Rename original author",
-    "DeleteOriginalAuthor": "Delete original author",
 
     "KeywordHeadline": "Keywords",
-    "CreateKeyword": "Create new keyword",
-    "RenameKeyword": "Rename keyword",
-    "DeleteKeyword": "Delete keyword"
-  }
+
+    "EditorLoadError": "Failed to load editor",
+    "InvalidEditorError": "Invalid editor type",
+
+    "ConnectionErrorHeadline": "Warning",
+    "ConnectionErrorMessage": "Connection to server lost.\nAutomatic page reload is not possible.",
+
+    "CollapseButtonTitle": "Toggle collapsed category",
+
+    "ModalSuccess": "Success",
+    "ModalWarning": "Warning",
+    "ModalError": "Error",
+    "ModalInfo": "Info",
+    "ModalConfirm": "Confirm",
+
+    "CategoryInputHeadline": "Category",
+    "CategoryNameInput": "Category description:",
+    "ParentNameInput": "Parent category:",
+
+    "NoParentCategory": "(No parent category)",
+
+    "CategoryWarningMessage": "Nothing has been entered",
+    "CategoryCreateSuccess": "New category has been created",
+    "CategoryCreateError": "New category has not been created",
+    "CategoryRenameSuccess": "Category has been renamed",
+    "CategoryRenameError": "Category has not been renamed",
+    "CategoryInfoMessage": "Please choose a category",
+    "CategoryConfirmMessage": "Are you sure you want to delete this category?",
+    "CategoryDeleteSuccess": "Deletion was successful",
+    "CategoryDeleteError": "Deletion was not successful",
+
+    "GenreInputHeadline": "Genre",
+    "GenreNameInput": "Genre name:",
+    "GenreWarningMessage": "Nothing has been entered",
+    "GenreCreateSuccess": "New genre has been created",
+    "GenreCreateError": "New genre has not been created",
+    "GenreRenameSuccess": "Genre has been renamed",
+    "GenreRenameError": "Genre has not been renamed",
+    "GenreConfirmMessage": "Are you sure you want to delete this genre?",
+    "GenreDeleteSuccess": "Deletion was successful",
+    "GenreDeleteError": "Deletion was not successful",
+    "GenreInfoMessage": "Please choose a genre",
+
+    "KeywordInputHeadline": "Keyword",
+    "KeywordNameInput": "Keyword name:",
+    "KeywordWarningMessage": "Nothing has been entered",
+    "KeywordCreateSuccess": "New keyword has been created",
+    "KeywordCreateError": "New keyword has not been created",
+    "KeywordRenameSuccess": "Keyword has been renamed",
+    "KeywordRenameError": "Keyword has not been renamed",
+    "KeywordConfirmMessage": "Are you sure you want to delete this keyword?",
+    "KeywordDeleteSuccess": "Deletion was successful",
+    "KeywordDeleteError": "Deletion was not successful",
+    "KeywordInfoMessage": "Please choose a keyword",
+
+    "KindInputHeadline": "Kind",
+    "KindNameInput": "Kind name:",
+    "KindWarningMessage": "Nothing has been entered",
+    "KindCreateSuccess": "New kind has been created",
+    "KindCreateError": "New kind has not been created",
+    "KindRenameSuccess": "Kind has been renamed",
+    "KindRenameError": "Kind has not been renamed",
+    "KindConfirmMessage": "Are you sure you want to delete this kind?",
+    "KindDeleteSuccess": "Deletion was successful",
+    "KindDeleteError": "Deletion was not successful",
+    "KindInfoMessage": "Please choose a kind",
+
+    "LitOriginInputHeadline": "Literary original",
+    "LitOriginNameInput": "Literary original name:",
+    "LitOriginWarningMessage": "Nothing has been entered",
+    "LitOriginCreateSuccess": "New literary original has been created",
+    "LitOriginCreateError": "New literary original has not been created",
+    "LitOriginRenameSuccess": "Literary original has been renamed",
+    "LitOriginRenameError": "Literary original has not been renamed",
+    "LitOriginConfirmMessage": "Are you sure you want to delete this literary original?",
+    "LitOriginDeleteSuccess": "Deletion was successful",
+    "LitOriginDeleteError": "Deletion was not successful",
+    "LitOriginInfoMessage": "Please choose a literary original",
+
+    "OrigAuthInputHeadline": "Original author",
+    "OrigAuthNameInput": "Literary author's name:",
+    "OrigAuthSurnameInput": "Literary author's surname:",
+    "OrigAuthWarningMessage": "Nothing has been entered",
+    "OrigAuthCreateSuccess": "New original author has been created",
+    "OrigAuthCreateError": "New original author has not been created",
+    "OrigAuthRenameSuccess": "Original author has been renamed",
+    "OrigAuthRenameError": "Original author has not been renamed",
+    "OrigAuthConfirmMessage": "Are you sure you want to delete this original author?",
+    "OrigAuthDeleteSuccess": "Deletion was successful",
+    "OrigAuthDeleteError": "Deletion was not successful",
+    "OrigAuthInfoMessage": "Please choose an original author",
+
+    "RespPerInputHeadline": "Responsible person",
+    "RespPerNameInput": "Responsible person's name:",
+    "RespPerSurnameInput": "Responsible person's surname:",
+    "RespPerWarningMessage": "Nothing has been entered",
+    "RespPerCreateSuccess": "New responsible person has been created",
+    "RespPerCreateError": "New responsible person has not been created",
+    "RespPerRenameSuccess": "Responsible person has been renamed",
+    "RespPerRenameError": "Responsible person has not been renamed",
+    "RespPerConfirmMessage": "Are you sure you want to delete this responsible person?",
+    "RespPerDeleteSuccess": "Deletion was successful",
+    "RespPerDeleteError": "Deletion was not successful",
+    "RespPerInfoMessage": "Please choose an responsible person",
+
+    "RespPerTypeInputHeadline": "Responsible person type",
+    "RespPerTypeNameInput": "Responsible person type name:",
+    "RespPerTypeInput": "Type:", 
+    "RespPerTypeWarningMessage": "Nothing has been entered",
+    "RespPerTypeCreateSuccess": "New responsible person type has been created",
+    "RespPerTypeCreateError": "New responsible person type has not been created",
+    "RespPerTypeRenameSuccess": "Responsible person type has been renamed",
+    "RespPerTypeRenameError": "Responsible person type has not been renamed",
+    "RespPerTypeConfirmMessage": "Are you sure you want to delete this responsible person type?",
+    "RespPerTypeDeleteSuccess": "Deletion was successful",
+    "RespPerTypeDeleteError": "Deletion was not successful",
+    "RespPerTypeInfoMessage": "Please choose a responsible person type"
+  },
+  "scope": "KeyTable"
 }
