Improve localization for permission errors

--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
@@ -20,9 +20,9 @@
     "user-cardfile-access-forbidden": "Nemáte přístup ke čtení kartotéky",
     "user-book-access-forbidden": "Nemáte přístup k této knize",
     "user-book-read-forbidden": "Nemáte přístup ke čtení této knihy",
-    "user-book-read-project-forbidden": "Nemáte přístup ke čtení tohoto rozpracovaného díla",
-    "user-book-edit-project-forbidden": "Nemáte přístup k úpravě tohoto díla",
-    "user-book-admin-project-forbidden": "Nemáte přístup ke správě tohoto díla",
+    "user-book-read-project-forbidden": "Nemáte právo k zobrazení tohoto rozpracovaného díla",
+    "user-book-edit-project-forbidden": "Nemáte právo k úpravě tohoto díla",
+    "user-book-admin-project-forbidden": "Nemáte právo ke spravování tohoto díla",
     "user-resource-access-forbidden": "Nemáte přístup ke knize s tímto zdrojem",
     "project-id-or-resource-id": "Musí být specifikován právě jeden parametr (ProjectId or ResourceId)",
     "create-anonymous-feedback": "Pokud není uživatel přihlášen je nutné vytvořit anonymní připomínku",
