Fixed book reader title

--- a/UJCSystem/ITJakub.Web.Hub/Localization/AudioBooks/AudioBooks.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/AudioBooks/AudioBooks.cs-CZ.json
@@ -4,6 +4,7 @@
   "dictionary": {
     "AudioBooksFeedback": "Audioknihy - Připomínky",
     "AudioBooksInformation": "Audioknihy - Informace",
-    "AudioBooksList": "Audioknihy - Seznam"
+    "AudioBooksList": "Audioknihy - Seznam",
+    "AudioBookListing": "Audioknihy - Čtečka děl"
   }
 }
