--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
@@ -12,6 +12,7 @@
     "BohemianTextBankInformation": "Korpusy - Informace",
     "BohemianTextBankList": "Korpusy - Seznam",
     "BohemianTextBankSearch": "Korpusy - Vyhledávání",
+    "BohemianTextBankListing": "Korpusy - Čtečka děl",
     "ViewOptions": "Možnosti zobrazení",
     "Word": "Slovo",
     "Comment": "Komentář",
