--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
@@ -12,6 +12,7 @@
     "BohemianTextBankInformation": "Corpora - Information",
     "BohemianTextBankList": "Corpora - List",
     "BohemianTextBankSearch": "Corpora - Search",
+    "BohemianTextBankListing": "translate[Korpusy - Čtečka děl]",
     "ViewOptions": "View options",
     "Word": "Word",
     "Comment": "Comment",
