Authorize TextComment and ResourceVersion

--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
@@ -66,6 +66,7 @@
     "snapshot-must-contain-metadata": "Dílo musí obsahovat metadata, jinak nemůže být publikováno.",
     "forbidden": "Nedostatečná práva pro tuto operaci",
     "user-already-assigned-to-role": "Uživatel '{0}' se již nachází ve skupině '{1}'.",
+    "invalid-comment-author-forbidden": "Pouze autor může měnit své komentáře",
     
     //Auth service codes
     "generic-error": "Operace se nezdařila",
