--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -150,7 +150,7 @@
     "RemoveProjectFromGroup": "Odebrat toto dílo ze skupiny",
     "ProjectsInGroup": "Díla ve skupině",
     "SelectProjectForCreatingGroup": "Vyberte dílo, se kterým stávající dílo vytvoří skupinu",
-    "SelectProjectForCreatingGroupNote": "Poznámka: Zobrazena jsou jenom díla, ke kterým máte oprávnění.",
+    "SelectProjectForCreatingGroupNote": "Poznámka: Zobrazena jsou jenom díla, ke kterým máte oprávnění (číst dílo).",
 
     "EditPageList": "Upravit seznam stránek",
     "AddPage": "Přidat stránku",
