Removed page wrapping and replaced with page separation checkbox

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.cs-CZ.json
@@ -17,7 +17,7 @@
     //Button names
     "addBoookmark": "Přidat záložku",
     "pageNames": "Číslování stránek",
-    "wrapPages": "Zalamovat stránky",
+    "separatePages": "Oddělit stránky",
     "notes": "Poznámky",
     
     "editionNote": "Ediční poznámka",
