--- a/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
@@ -17,7 +17,7 @@
     //Button names
     "addBoookmark": "Add bookmark",
     "pageNames": "Page numbers",
-    "wrapPages": "Wrap pages",
+    "separatePages": "Separate pages",
     "notes": "Notes",
 
     "editionNote": "Edition note",
