Add headword icon

--- a/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.cs-CZ.json
@@ -41,6 +41,7 @@
     "Category": "Kategorie",
     "SearchingQuery": "Vyhledávací dotaz",
     "BookVersion": "Verze knihy",
+    "Headword": "Heslo",
     "UnknownFavItemType": "Neznámý typ oblíbené položky",
 
     "AllItems": "Všechny položky",
