Use "Dictionary headword" in localization

--- a/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.cs-CZ.json
@@ -41,7 +41,7 @@
     "Category": "Kategorie",
     "SearchingQuery": "Vyhledávací dotaz",
     "BookVersion": "Verze knihy",
-    "Headword": "Heslo",
+    "DictionaryHeadword": "Slovníkové heslo",
     "UnknownFavItemType": "Neznámý typ oblíbené položky",
 
     "AllItems": "Všechny položky",
