--- a/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/FavoriteJs/FavoriteJs.en.json
@@ -41,7 +41,7 @@
     "Category": "translate[Kategorie]",
     "SearchingQuery": "translate[Vyhledávací dotaz]",
     "BookVersion": "translate[Verze knihy]",
-    "Headword": "Headword",
+    "DictionaryHeadword": "Dictionary headword",
     "UnknownFavItemType": "translate[Neznámý typ oblíbené položky]",
 
     "AllItems": "translate[Všechny položky]",
