--- a/UJCSystem/ITJakub.Web.Hub/Localization/account/account.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/account/account.en.json
@@ -52,6 +52,9 @@
     
     "UserCode": "User code",
     "GenerateNewUserCode": "Generate new user code",
-    "UserCodeHelp": "User code is used for enabling cooperation on works of other users. Provide your user code to the editor of the work on which you will cooperate."
+    "UserCodeHelp": "User code is used for enabling cooperation on works of other users. Provide your user code to the editor of the work on which you will cooperate.",
+    "UserRoles": "User roles",
+    "Name": "Name",
+    "Description": "Description"
   }
 }
