--- a/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
@@ -74,6 +74,7 @@
 
     "AllBookmarks": "All bookmarks",
 
-    "LoadingContentError": "Failed to load content"
+    "LoadingContentError": "Failed to load content",
+    "NoResults": "Text does not contain searched expression"
   }
 }
